Fix overflow

--- a/src/SPA/src/components/game/components/game-content/game-work-item/game-work-item.scss
+++ b/src/SPA/src/components/game/components/game-content/game-work-item/game-work-item.scss
@@ -103,6 +103,11 @@
 		a {
 			color: $communication-shade-10;
 		}
+
+
+		.content > div {
+			padding-bottom: 1rem;
+		}
 	}
 
 	.true-mobile & {
